--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,7 @@
 /target/
 
 # Translated C++ that shouldn't be committed
-/translated/test-cases/
-/translated/bootstrapped/
-
-# VS on windows files
-/.vs/
-*.user
-*.db
-*.opendb
-Debug/
-ipch/
+/translated/
 
 # VS Code Files
 .vscode/
